tests/ui/traits/solver-cycles/148653-recursive-struct-infinte-cycle.rs
// Issue #148653.
struct Vec<T> { //~ ERROR recursive type `Vec` has infinite size
    data: Vec<T>, //~ ERROR type parameter `T` is only used recursively
}
impl<T> Vec<T> {
    pub fn push(&mut self) -> &mut Self {
        self
    }
}

fn main() {}
